@@ -8,13 +8,14 @@
 #ifndef _EXPOFCN_H_INCLUDED
 #define _EXPOFCN_H_INCLUDED
 
-#include "ddddr/MuonEnergyFCNBase.h"
+#include "gulliver/I3GulliverBase.h"
+#include "MuonEnergyFunctions.h"
 #include <vector>
 
 /**
  * @brief Minimizer function based on an exponential function (ExpoFunction).
  */
-class ExpoFcn : public MuonEnergyFCNBase
+class ExpoFcn : public I3GulliverBase
 {
 	public:
 		/**
@@ -29,17 +30,17 @@ class ExpoFcn : public MuonEnergyFCNBase
 
 		~ExpoFcn() {}
 
-		virtual double Up() const {return errorDef_;}
-
 		/// Returns the log likelihood for given set of parameters.
-		virtual double operator()(const std::vector<double>&) const;
+		double operator()(const std::vector<double>&);
+		double operator()(const std::vector<double>&,
+				  std::vector<double>&);
 
 		std::vector<double> measurements() const {return measurements_;}
 
 		std::vector<double> positions() const {return positions_;}
 
 		/// Returns function value for given set of parameters.
-		virtual double f(const std::vector<double>&, double) const;
+		double f(const std::vector<double>&, double) const;
 
 		void setErrorDef(double def) {errorDef_ = def;}
 
