@@ -24,12 +24,15 @@
 
 #include "ddddr/I3MuonEnergyParams.h"
 #include "ddddr/I3MuonEnergyCascadeParams.h"
-#include "ddddr/FitParameterSpecs.h"
+
+#include "gulliver/I3FitParameterInitSpecs.h"
+#include "gulliver/I3GulliverBase.h"
+
 #ifdef USE_MINUIT2
-#include "ddddr/MuonEnergyMinuit2.h"
-#include "ddddr/MuonEnergyFCNBase.h"
+#include "lilliput/minimizer/I3GulliverMinuit2.h"
+#endif
+
 #include "ddddr/ExpoFcn.h"
-#endif // USE_MINUIT2
 
 /**
  * @brief Struct that contains the energy of a muon bundle at a certain position
