@@ -6,6 +6,18 @@
 # Project maintainer: Hape Bretz (hans-peter.bretz@desy.de)
 
 
+March 12, 20119 Michael Larson
+--------------------------------------------------------------------
+Trunk
+
+- Swapped copied classes (FitParameterSpecs, MinimizerResult, 
+  MuonEnergyFCNBase, MuonEnergyMinuit2) for the corresponding 
+  classes in the gulliver suite. 
+- Changed minimizer backend to use I3GulliverMinuit2 from lilliput
+- Tightened the minimizer tolerance (0.1 --> 0.0001)
+- Removed direct ROOT dependence, although it still exists indirectly
+  via lilliput's I3GulliverMinuit2. Next step is to try other minimizers.
+
 
 November 30, 2017 Kevin Meagher
 --------------------------------------------------------------------
